--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
     "chart.js": "^4.4.3",
+    "chartjs-plugin-dragdata": "^2.2.5",
+    "chartjs-plugin-gradient": "^0.6.1",
     "next": "14.2.3",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
