--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chartjs-plugin-dragdata": "^2.2.5",
     "chartjs-plugin-gradient": "^0.6.1",
     "next": "14.2.3",
+    "openai": "^4.48.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18"
