--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -70,6 +70,8 @@ jobs:
         run: pnpm install --frozen-lockfile
       - name: Build with Next.js
         run: pnpm next build
+        env:
+          NEXT_PUBLIC_OPENAI_API_KEY: ${{ secrets.NEXT_PUBLIC_OPENAI_API_KEY }}
       - name: List files after build
         run: ls -al
       - name: Upload artifact
